--- a/заказать.html
+++ b/заказать.html
@@ -33,7 +33,7 @@
         <label>
             <input type="tel" name="tel">
             <div class="label__text">
-                Введите ваш номер телефон
+                Введите ваш номер телефона
             </div>
         </label>
         <label>
